--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -1,7 +1,5 @@
 body {
     font-family: Arial, Helvetica, sans-serif;
-    margin: 0;
-    padding: 0;
 }
 
 /*导航栏*/
@@ -88,7 +86,6 @@ li {
     }
 }
 
-
 /*用户*/
 
 .dropdown {
@@ -101,6 +98,7 @@ li {
     border: none;
     background-color: black;
     color: white;
+    cursor: pointer;
     font-size: 16px;
     height: 50px;
     width: 70px;
@@ -112,7 +110,7 @@ li {
     display: none;
     position: absolute;
     right: 0;
-    padding: 0 10px;
+    padding: 10px;
 }
 
 .dropdown-content a {
@@ -130,6 +128,10 @@ li {
 
 .dropdown-content a:hover {
     background-color: #b6baba;
+}
+
+div a.dropdown-this-page {
+    background-color: rgba(0,0,0,0.4);
 }
 
 .dropdown-item img {
@@ -165,7 +167,7 @@ li {
 
 @media (max-width: 420px) {
     .head-figure {
-        height: 200px;
+        height: 180px;
     }
 }
 
@@ -178,8 +180,8 @@ li {
     justify-content: center;
 }
 .main figure{
+     position: relative;
      box-shadow: gray 0 0 10px;
-     display: inline-block;
      width: 300px;
      height: 300px;
      margin: 15px;
@@ -194,13 +196,14 @@ li {
 }
 
 .main figcaption{
+    position: absolute;
+    bottom: 0;
     background-color: rgba(0,0,0,0.4);
     color: white;
     opacity: 0;
     width: 300px;
     height: 80px;
     padding: 10px;
-    margin-top: -80px;
     transition: opacity 1s ease;
 }
 
@@ -218,6 +221,12 @@ li {
     overflow: hidden;  /** 隐藏超出的内容 **/
 }
 
+@media (max-width: 420px) {
+
+    .main {
+        padding: 25px 20px;
+    }
+}
 
 /*两个小图标*/
 
@@ -253,20 +262,24 @@ input[type='button'] {
     outline: none;
 }
 
-/*脚注*/
+/*其他页脚注*/
 
 footer {
     background: black;
     color: white;
     font-size: 12px;
     padding: 4px;
+    text-align: right;
 }
+
+/*主页脚注*/
 
 .home-footer {
     background-color: black;
     display: flex;
     flex-flow: column nowrap;
     line-height: 1.2rem;
+    text-align: center;
 }
 
 .words {
@@ -274,38 +287,44 @@ footer {
     flex-flow: row wrap;
     justify-content: center;
 }
+
 .words p {
-    /*border: 1px solid crimson;*/
     height: 50px;
     width: 120px;
     line-height: 50px;
     vertical-align: center;
     margin-right: 20px;
-
 }
 
-.footer-img-one {
-    /*border: 1px solid crimson;*/
+.words-div {
     height: 50px;
     width: 120px;
     position: relative;
+    margin-right: 20px;
+}
+
+.footer-img-one {
+    display: inline-block;
+}
+
+.words-div img {
+    display: inline-block;
 }
 
 .code img {
     width: 120px;
     border-radius: 10px;
-    position: absolute;
-    bottom: 50px;
-    right: 40px;
 }
 
 .code {
-    display: none;
+    opacity: 0;
+    position: absolute;
+    bottom: 45px;
+    right: 28px;
 }
 
-.weixin:hover .code {
-    display: block;
-    border: 1px solid crimson;
+.footer-img-one:hover .code {
+    opacity: 1;
 }
 .weixin:hover,.weibo:hover {
     border: 1px solid black;
