--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -7,7 +7,7 @@
 /*搜索版块*/
 
 .search div {
-    padding: 30px;
+    padding: 30px 20px 0 20px;
     display: flex;
     flex-flow: column nowrap;
     /*border: 2px solid crimson;*/
@@ -17,12 +17,13 @@
     border: none;
     border-radius:5px;
     background-color:rgba(241,241,241,.98);
-    padding: 20px;
+    padding: 0 10px;
     height: 40px;
     outline: none;
     width: auto;
-    margin: 20px;
+    margin: 20px 0;
 }
+
 .search textarea {
     border: none;
     border-radius:5px;
@@ -31,14 +32,14 @@
     width: auto;
     outline: none;
     padding: 10px;
-    margin: 20px;
+    margin: 20px 0;
 }
 
 input[type='submit'] {
     border: none;
     border-radius: 5px;
     outline: none;
-    margin: 0 20px;
+    margin: 10px 30px 30px 30px;
     background-color: indianred;
     color: white;
     height: 2.5rem;
@@ -46,11 +47,61 @@ input[type='submit'] {
     text-align: center;
 }
 
+/*RADIO*/
+
+.radio input[type="radio"] {
+    position: absolute;
+    opacity: 0;
+}
+
+.radio input[type="radio"] + .radio-label:before {
+    content: '';
+    background: #f4f4f4;
+    border-radius: 100%;
+    border: 1px solid #b4b4b4;
+    display: inline-block;
+    width: 1.2em;
+    height: 1.2em;
+    position: relative;
+    top: -0.25em;
+    margin-right: 0.5em;
+    vertical-align: top;
+    cursor: pointer;
+    text-align: center;
+    -webkit-transition: all 250ms ease;
+    transition: all 250ms ease;
+}
+
+.radio input[type="radio"]:checked + .radio-label:before {
+    background-color: indianred;
+    box-shadow: inset 0 0 0 4px #f4f4f4;
+}
+
+.radio input[type="radio"]:focus + .radio-label:before {
+    outline: none;
+    border-color: indianred;
+}
+
+.radio input[type="radio"] + .radio-label:empty:before {
+    margin-right: 0;
+}
+
+@media (max-width: 420px) {
+    .search input[type="text"] {
+        margin: 10px 0;
+    }
+    .search textarea {
+        margin: 10px 0;
+    }
+
+}
+
 /*结果图片展示*/
 
 .result figure{
     /*border: 1px solid crimson;*/
     height: 260px;
+    width: 100%;
     display: flex;
     flex-flow: row nowrap;
 }
@@ -62,6 +113,7 @@ figure:first-of-type {
 .result img {
     width: 230px;
     height: 230px;
+    min-width: 230px;
     object-fit: cover;
     border-radius: 25px;
     margin: 0 30px 30px 30px;
@@ -104,7 +156,9 @@ figcaption p {
         height: 440px;
         flex-flow: column nowrap;
     }
+
     .result img {
+        display: block;
         margin: 0 auto;
     }
     .result figcaption {
@@ -115,8 +169,16 @@ figcaption p {
     figcaption p {
         -webkit-line-clamp: 3; /** 显示的行数 **/
     }
-
 }
+
+@media (max-width: 420px) {
+    div.search {
+        margin: 0;
+        border: none;
+    }
+}
+
+/*页脚*/
 
 .page {
     color: #888888;
