--- a/src/styles/upload.css
+++ b/src/styles/upload.css
@@ -1,17 +1,95 @@
-form {
-    margin: 40px;
+/*图片上传预览*/
+#box {
+    background-image: url('../../images/icon/添加.png');
+    background-size: 150px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-color:white;
+
+    margin: 40px 0;
+    width: 100%;
+    height: 500px;
+  }
+
+.upload-picture img {
+    display: block;
+    width: auto;
+    max-height: 100%;
+    margin: auto auto;
+    overflow: hidden;
+}
+
+/*上传按钮*/
+
+#file {
+    display: inline-block;
+    margin: 0 auto;
+}
+
+.file {
+    position: relative;
+    display: block;
+    margin: 20px auto 40px auto;
+    background: indianred;
+    border-radius: 5px;
+    height: 2.5rem;
+    width: 8rem;
+    text-align: center;
+    overflow: hidden;
+    color: white;
+    text-decoration: none;
+    text-indent: 0;
+    line-height: 2.5rem;
+}
+
+.file input {
+    position: absolute;
+    font-size: 100px;
+    right: 0;
+    top: 0;
+    opacity: 0;
+}
+
+.file:hover {
+    background: rgba(205, 92, 92, 0.65);
+    border-color: indianred;
+}
+
+@media (max-width: 420px) {
+    form {
+        margin: 0;
+        border: none;
+    }
+    #box {
+        height: 300px;
+        display: flex;
+        align-items: center;
+    }
+    form img {
+        max-width: 100%;
+        height: auto;
+    }
+
+    .upload-content {
+        border: none;
+        margin: 0;
+    }
+}
+
+/*上传图片描述*/
+
+.upload-content {
+    margin: 20px;
     border: 1px solid gainsboro;
     border-radius: 5px;
     padding: 20px;
 }
-img {
-    width: 600px;
-    height: 600px;
-}
+
 label {
     display: block;
     margin-top: 20px;
 }
+
 .normal {
     height: 20px;
     width: 100%;
@@ -27,16 +105,17 @@ label {
     text-align: center;
 }
 
-
 input[type="text"] {
     border: none;
     border-radius:5px;
     background-color:rgba(241,241,241,.98);
     margin: 20px 0;
+    padding: 0 10px;
     height: 40px;
     outline: none;
     width: 100%;
 }
+
 textarea {
     border: none;
     border-radius: 5px;
@@ -45,7 +124,6 @@ textarea {
     width: 100%;
     outline: none;
     margin: 20px 0;
+    padding: 10px;
 }
 
-
-/*尝试*/
