--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -190,6 +190,7 @@ div a.dropdown-this-page {
  }
 
 .main figure img{
+    background-color: rgba(255, 178, 95, 0.6);
     width: 100%;
     height: 100%;
     object-fit: cover;
