--- a/src/styles/log-in.css
+++ b/src/styles/log-in.css
@@ -2,6 +2,7 @@
 
 .main-body {
     background-image: url(../../images/logphotos/高清2.jpg);
+    background-color: rgba(255, 178, 95, 0.6);
     background-repeat: no-repeat;
     background-attachment: fixed;
     background-size: 100%;
@@ -10,8 +11,6 @@
     display: flex;
     flex-flow: column nowrap;
 }
-
-
 
 /*logo*/
 
@@ -28,10 +27,10 @@ h3 {
 }
 
 /*登录注册条*/
+
 .row {
     background-color: rgba(0,0,0,0.7);
     background-position: center;
-
     display: flex;
     flex-flow: row nowrap;
     justify-content: center;
@@ -61,13 +60,12 @@ h3 {
     background-color: white;
     color: black;
 }
+
 @media (max-width: 1200px) and (min-width: 420px){
     .main-body {
         background-size: 120%;
     }
 }
-
-
 
 /*登录注册内容*/
 
@@ -79,10 +77,11 @@ section {
     height: 500px;
     width: 40%;
 }
+
 .input {
     background-color: white;
     margin-top: 8px;
-    padding: 5px;
+    padding: 10px 0;
 }
 
 input[type='password'],input[type='text'],input[type='email'] {
@@ -90,9 +89,9 @@ input[type='password'],input[type='text'],input[type='email'] {
     border-radius: 8px;
     display: block;
     height: 30px;
-    width: 70%;
-    margin: 10px 10px;
-    padding: 5px 10px;
+    width: 92%;
+    margin: 10px 4%;
+    padding: 0 10px;
 }
 
 input[type='submit'] {
@@ -104,23 +103,25 @@ input[type='submit'] {
     width: 8rem;
     text-align: center;
     outline: none;
-    margin: 10px 20px;
+    margin: 10px 4%;
 }
 
 @media (max-width: 420px) {
-
     .main-body {
         background-size: 100% 700px;
         height: 700px;
     }
+
     .logo image {
         width: 120%;
     }
+
     .row,section {
         width: auto;
         margin-left: 20px;
         margin-right: 20px;
     }
+
     section {
         height: 200px;
     }
